# wasm_battle_arena

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_FLEX_QUEUE_WORKER.md  IMPLEMENTATION_REPORT_NETWORK_JS.md  IMPLEMENTATION_REPORT_ROLLOVER.md  IMPLEMENTATION_REPORT_TURN.md  IMPLEMENTATION_REPORT_WAVE_B.md  IMPLEMENTATION_REPORT_WAVE_C.md  README.md  ROLLOVER_PROTOCOL.md  deploy.bat  index.html  package-lock.json  package.json  watch.bat
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: pages.yml
cloudflare-worker/: README.md  package-lock.json  package.json  wrangler.jsonc  wrangler.local.jsonc
cloudflare-worker/src/: assignment.js  epoch-lobby.js  epoch-state.js  index.js  lobby.js  match-queue.js  protocol.js  queue-state.js  turn.js
cloudflare-worker/test/: assignment.test.js  epoch-lobby-source.test.js  epoch-state.test.js  lifecycle.test.js  protocol.test.js  queue-state.test.js  rematch.test.js  turn-integration.test.js  turn.test.js
docs/: assets.md  deathmatch-rules.md  dependency-maintenance.md  determinism-audit.md  lobby-v2.md  lobby-v3.md  matchmaking-v4.md  multiplayer-architecture.md  network-telemetry.md  performance.md
docs/implementation-reports/: IMPLEMENTATION_REPORT_DYNAMIC_LGS_CLIENT.md  IMPLEMENTATION_REPORT_DYNAMIC_LGS_WORKER.md  IMPLEMENTATION_REPORT_EXTENDED_TRANSITIONS.md  IMPLEMENTATION_REPORT_FLEX_QUEUE_CLIENT.md  IMPLEMENTATION_REPORT_MOBILE_MENU.md  IMPLEMENTATION_REPORT_PRACTICE.md  IMPLEMENTATION_REPORT_WAVE_A.md
scripts/: check-deployment.sh  cloudflare-net-js-playwright.mjs  cloudflare-net-js-test.mjs  flexible-queue-protocol-smoke.mjs  generate-cosmetics.py  multiplayer-browser-smoke.mjs  multiplayer-protocol-smoke.mjs  network-transition-smoke.mjs  run-ingame-smoke.sh  run-local-multiplayer-smoke.sh  run-mobile-input-smoke.sh  run-network-transition-smoke.sh  smoke-any-queue.mjs  smoke-ingame.mjs  smoke-mobile-input.mjs  verify-live-turn.mjs
src/: cloudflare_net.js  cloudflare_net.rs  interface.rs  main.rs  mobile_input.rs
src/game/: components.rs  debug_render.rs  ggrs_framecount.rs  gui.rs  input.rs  map.rs  mod.rs  network_transition_test.rs  networking.rs  player.rs  practice.rs  progression.rs  rollback_audio.rs  session.rs  textures.rs  toasts.rs
src/game/assets/: mod.rs  procedural.rs  sounds.rs  textures.rs
