[package]
name = "wasm_battle_arena"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 's'
lto = "thin"
#strip = "debuginfo"

# optimizes only included packages on first build to help debug file size and speed
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11"
bevy_ggrs = { version = "0.13", features = ["wasm-bindgen"]}
ggrs = "0.9"
bevy_matchbox = { version = "0.7", features = ["ggrs"]}
bevy_asset_loader = { version = "0.17", features=["2d"]}
bevy_roll_safe = { git = "https://github.com/johanhelsing/bevy_roll_safe" }
bevy_egui = "0.22"
wasm-bindgen = { version = "0.2.88", optional = true }
seeded-random = "0.6"
#bevy-inspector-egui = "0.20"

[patch.crates-io]
bevy = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features=["bevy_reflect"]}
bevy_matchbox = { git = "https://github.com/johanhelsing/matchbox", branch = "main"}

[features]
default = []
local = []
# disables rollback input delay for testing
no_delay = []
debug_render = []
bindgen = ["dep:wasm-bindgen"]
dev = ["no_delay", "debug_render"]
