[package]
name = "wasm_battle_arena"
version = "0.8.4"
edition = "2021"

[profile.release]
opt-level = 's'
lto = "fat"
strip = "debuginfo"
debug = false
panic = "abort"

[profile.dev]
# set limited debug info
debug = 1
incremental = true

# optimizes only included packages on first build to help debug file size and speed
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", default-features = false, features = ["bevy_asset","bevy_winit","bevy_core_pipeline","bevy_render","bevy_sprite","multi-threaded","png","default_font","webgl2"]}
bevy_ggrs = { version = "0.13", features = ["wasm-bindgen"]}
ggrs = "0.9"
bincode = "1.3"
bevy_asset_loader = { version = "0.17", features=["2d"]}
bevy_roll_safe = { git = "https://github.com/johanhelsing/bevy_roll_safe" }
bevy_egui = "0.22"
bevy_kira_audio = { version = "0.17", features=["ogg"] }
seeded-random = "0.6"
bevy-inspector-egui = { version = "0.20", optional = true }
egui-toast = "0.9"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"

[patch.crates-io]
bevy = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
# Patch the dependencies of bevy-inspector-gui to the roll-safe versions.
bevy_app  = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_asset = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_core = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_ecs = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_hierarchy = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_log = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_math = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_reflect = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_utils = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_window = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }

bevy_core_pipeline = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_pbr = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }
bevy_render = { git = "https://github.com/johanhelsing/bevy", branch = "reflect-states-0.11" }

egui-toast = { git = "https://github.com/ConnorBP/egui-toast", branch="toast-sync" }

[features]
default = []
local = []
# disables rollback input delay for testing
no_delay = []
debug_render = ["dep:bevy-inspector-egui"]
sync_test = []
auto_sync_test = ["sync_test"]
auto_mobile_input_test = []
bindgen = []
# connects to a separate development matchmaking room
dev_net = []
dev = ["no_delay", "debug_render", "sync_test", "dev_net"]